fixed scroll is visible on loader

--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,4 +1,7 @@
 @reference "@/assets/styles/global.css";
+body {
+  overflow: hidden;
+}
 
 .loader-container {
   position: fixed;
